<resources>
    <!--Title bar strings-->
    <string name="app_name">Discus Trajectory Calculator</string>
    <string name="title_trajectory_analyzer">Trajectory analyzer</string>
    <string name="title_new_athlete">Add new athlete</string>

    <!--Model variable names-->
    <string name="release_speed">Release speed</string>
    <string name="release_angle">Release angle</string>
    <string name="angle_of_attack">Angle of attack</string>
    <string name="wind_speed">Wind speed</string>
    <string name="gravity">Gravity</string>
    <string name="release_height">Release height</string>
    <string name="delta_t">Δt</string>
    <string name="air_density">Air density</string>
    <string name="mass">Mass</string>
    <string name="discus_diameter">Discus diameter</string>
    <string name="discus_height">Discus height</string>
    <string name="final_distance">Final distance</string>

    <!--Placeholder strings-->
    <string name="meters">%1$.2f m</string>
    <string name="meters_per_second">%1$.2f m/s</string>
    <string name="kilometers_per_hour">%1$.2f km/h</string>
    <string name="degrees">%1$.2f°</string>

    <!--Menu item strings-->
    <string name="new_training">New Training</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="trajectory_analyzer">Trajectory Analyzer</string>
    <string name="next">Next</string>
    <string name="save">Save</string>

    <!--New athlete fields-->
    <string name="new_athlete_name">Name</string>
    <string name="new_athlete_height">Height (m)</string>
    <string name="new_athlete_class">Class</string>
    <string name="new_athlete_sex">Sex</string>
    <string name="new_athlete_sex_male">Male</string>
    <string name="new_athlete_sex_female">Female</string>
    <string name="new_athlete_birthday">Birthday</string>
    <string name="new_athlete_add_athlete">Add athlete</string>

    <string-array name="new_athlete_classes">
        <item>Women B</item>
        <item>Women A</item>
        <item>Boys B</item>
        <item>Boys A</item>
        <item>Men</item>
    </string-array>

</resources>
