<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_athlete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    tools:context="nl.brendanspijkerman.discustrajectorycalculator.NewAthleteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/new_athlete_picture"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/placeholder_person"
                    android:background="#FFEEEEEE"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/camera"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="startCamera"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/inputWrapper">

                    <ImageView
                        android:src="@drawable/placeholder_person"
                        style="@style/inputIcon"/>

                    <EditText
                        android:id="@+id/new_athlete_name"
                        android:hint="@string/new_athlete_name"
                        android:inputType="textCapWords"
                        style="@style/inputText"
                        android:theme="@style/EditTextTheme" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/inputWrapper">

                    <ImageView
                        android:src="@drawable/calendar"
                        style="@style/inputIcon"/>

                    <TextView
                        android:id="@+id/new_athlete_birthday"
                        android:hint="@string/new_athlete_birthday"
                        style="@style/inputText"
                        android:theme="@style/EditTextTheme"
                        android:onClick="openDatePicker"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/inputWrapper">

                    <RadioGroup
                        android:id="@+id/new_athlete_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_athlete_sex_male"
                            android:layout_marginRight="16dp"
                            style="@style/inputText"
                            android:layout_marginLeft="0dp"/>
                            <!--style="@style/inputText"-->

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_athlete_sex_female"
                            style="@style/inputText" />
                            <!--style="@style/inputText"-->

                    </RadioGroup>

                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--style="@style/inputWrapper">-->

                    <!--<ImageView-->
                        <!--android:src="@drawable/ruler"-->
                        <!--android:rotation="90"-->
                        <!--style="@style/inputIcon"/>-->

                    <!--<EditText-->
                        <!--android:id="@+id/new_athlete_height"-->
                        <!--android:hint="@string/new_athlete_height"-->
                        <!--android:inputType="numberDecimal"-->
                        <!--style="@style/inputText"-->
                        <!--android:theme="@style/EditTextTheme"/>-->

                <!--</LinearLayout>-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--style="@style/inputWrapper">-->

                    <!--<ImageView-->
                        <!--android:src="@drawable/adjust"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--style="@style/inputIcon"/>-->

                    <!--<Spinner-->
                        <!--android:id="@+id/new_athlete_class"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:entries="@array/new_athlete_classes"-->
                        <!--style="@style/inputText"/>-->

                <!--</LinearLayout>-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="clickNext"/>

</LinearLayout>
